--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: url('/images/pattern-background-desktop.svg');
+    background-image: url('../images/pattern-background-desktop.svg'); 
     background-color: hsl(225, 100%, 94%);
     background-repeat: no-repeat;
     background-size: contain;
@@ -27,17 +27,20 @@ body {
 }
 
 .card__component {
-    max-width: 390px;
+    max-width: 435px;
+    width: 100%;
     border-radius: 20px;
     box-shadow: 0px 8px 15px #00000047;
 }
 
 .card__component-img {
-    background-image: url('/images/illustration-hero.svg');
+    background-image: url('../images/illustration-hero.svg');
     background-position: center;
     background-repeat: no-repeat;
     height: 26vh;
+    min-height: auto;
     border-radius: 20px 20px 0 0;
+    background-size: cover;
 }
 
 .card__component-body {
